# Shubhankar/totorial/server/src/controllers/loginuser.controller.ts
@@ -1,0 +1,13 @@
+import { Get, Route, Tags,  Post, Body, Path } from "tsoa";
+import {LoginUser} from '../models/loginuser'
+import {createloginUser, IloginUserPayload} from '../repositories/loginuser.repository'
+
+
+@Route("loginusers")
+@Tags("loginUser")
+export default class loginUserController {
+    @Post("/")
+    public async createUser(@Body() body:IloginUserPayload): Promise<LoginUser> {
+      return createloginUser(body)
+    }
+}
